--- a/src/isotopic_icp_store_backend/Cargo.toml
+++ b/src/isotopic_icp_store_backend/Cargo.toml
@@ -9,6 +9,14 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.8"
-ic-cdk = "0.7"
-ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
+candid = "0.9.11"
+ic-cdk = "0.11.0"
+ic-cdk-macros = "0.8.1"
+include-base64 = "0.1"
+serde = { version = "1", features = ["derive"] }
+percent-encoding = "2.1"
+ic-certified-map = "0.4.0"
+sha2 = "0.10.2"
+serde_cbor = "0.11.2"
+base64 = "0.21.5"
+ic-stable-structures = "0.6.0"
